--- a/app/views/viewCandidates.html
+++ b/app/views/viewCandidates.html
@@ -4,19 +4,29 @@
   <div id="sidebar-wrapper">
     <ul class="sidebar-nav">
         <li class="sidebar-brand">
-            <a href="#">
+            <a href="#" class="sidebarHeader">
                 Candidate List
             </a>
         </li>
         <li>
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search" aria-describedby="sizing-addon2">
+            <input type="text" class="form-control input-sm" placeholder="Search" aria-describedby="sizing-addon2">
             <span class="input-group-addon" id="sizing-addon2"><span class="glyphicon glyphicon-search"></span></span>
           </div>
+          <span>
+              <select class="form-control select-form input-sm sortInput" style="" >
+                <option disabled selected>Sort By</option>
+                <option>Name</option>
+                <option>Graduation Date</option>
+                <option>Major</option>
+                <option>Score</option>
+              </select>
+          </span>
         </li>
+        <hr>
         <ul id="candidate-list" data-ng-repeat="row in testRows">
           <li>
-              <a <a href="#/viewCandidate/{{row.id}}">{{ row.name }}</a>
+              <a href="#/viewCandidate/{{row.id}}">{{ row.name }}</a>
           </li>
         </ul>
     </ul>
