--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -21,23 +21,26 @@
         </ul>
     </ul>
   </div>
-Hello: {{ candidate.name }}
-  <!-- <div class="col-md-10 col-md-offset-1">
+
+  <div class="col-md-10 col-md-offset-1">
+    <div class="page-header">
+      <h1 class="text-center">{{ candidate[0].name }}</h1>
+    </div>
+
     <table class="table table-hover">
       <thead>
         <tr>
-          <th> Name </th>
           <th> Email </th>
           <th> Graduation Date </th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td> {{ candidate.name }} </td>
-          <td> {{ candidate.email }} </td>
-          <td> {{ candidate.graduationDate }} </td>
+          <td>  </td>
+          <td> {{ candidate[0].email }} </td>
+          <td> {{ candidate[0].graduationDate }} </td>
         </tr>
       </tbody>
     </table>
-  </div> -->
+  </div>
 </div>
