--- a/app/views/viewCandidates.html
+++ b/app/views/viewCandidates.html
@@ -14,9 +14,9 @@
             <span class="input-group-addon" id="sizing-addon2"><span class="glyphicon glyphicon-search"></span></span>
           </div>
         </li>
-        <ul id="candidate-list" data-ng-repeat="row in testRows">
+        <ul id="candidate-list" data-ng-repeat="row in candidates">
           <li>
-              <a <a href="#/viewCandidate/{{row.id}}">{{ row.name }}</a>
+              <a href="#/viewCandidate/{{row.id}}">{{ row.name }}</a>
           </li>
         </ul>
     </ul>
