added functionality for setting times

--- a/app/views/calendar.html
+++ b/app/views/calendar.html
@@ -41,7 +41,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              <button id="submit1" type="submit" class="btn btn-primary" value="Submit">Set Up Interview</button>
+              <button ng-click="addEvent()" type="submit" class="btn btn-primary" value="Submit">Set Up Interview</button>
             </div>
             </form>
           </div><!-- /.modal-content -->
