Delete old + test files.

--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -23,6 +23,9 @@
           <label>Phone Number:</label> {{candidate[0].phoneNumber}}
         </div>
         <div class="info-group">
+          <label>School:</label> {{candidate[0].school}}
+        </div>
+        <div class="info-group">
           <label>Major:</label> {{candidate[0].major}}
         </div>
         <div class="info-group">
