--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -6,7 +6,7 @@
   <!-- Candidate info -->
   <div id="page-content-wrapper">
     <div class="page-header" data>
-      <h1>{{candidate[0].name}}</h1>
+      <h1>{{candidate.name}}</h1>
     </div>
 
     <div class="container-fluid">
@@ -17,31 +17,31 @@
 
       <div class="info-tab-content" ng-model="selectedCandidate">
         <div class="info-group">
-          <label>Email Address:</label> {{candidate[0].email}}
+          <label>Email Address:</label> {{candidate.email}}
         </div>
         <div class="info-group">
-          <label>Phone Number:</label> {{candidate[0].phoneNumber}}
+          <label>Phone Number:</label> {{candidate.phoneNumber}}
         </div>
         <div class="info-group">
-          <label>School:</label> {{candidate[0].school}}
+          <label>School:</label> {{candidate.school}}
         </div>
         <div class="info-group">
-          <label>Major:</label> {{candidate[0].major}}
+          <label>Major:</label> {{candidate.major}}
         </div>
         <div class="info-group">
-          <label>Graduation Date:</label> {{candidate[0].graduationDate}}
+          <label>Graduation Date:</label> {{candidate.graduationDate}}
         </div>
         <div class="info-group">
-          <label>Sponsorship:</label> {{candidate[0].needSponsorship}}
+          <label>Sponsorship:</label> {{candidate.needSponsorship}}
         </div>
         <div class="info-group">
-          <label>Internship/Full-Time:</label> {{candidate[0].internOrFull}}
+          <label>Internship/Full-Time:</label> {{candidate.internOrFull}}
         </div>
         <div class="info-group">
-          <label>Areas of Interest:</label> {{candidate[0].areaOfInterest}}
+          <label>Areas of Interest:</label> {{candidate.areaOfInterest}}
         </div>
         <div class="info-group">
-          <label>Preferred Languages:</label> {{candidate[0].preferredLanguages}}
+          <label>Preferred Languages:</label> {{candidate.preferredLanguages}}
         </div>
         <div class="info-group">
           <label>Status:</label>
