--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -72,8 +72,8 @@
 
 /* Recruiter form styles */
 #recruiter-form-container {
-  position: absolute;
-  left: 0px;
+  /*position: absolute;
+  left: 0px;*/
 }
 
 #candidate-queue {
