Fixed sibear typo

--- a/app/views/sidebar.html
+++ b/app/views/sidebar.html
@@ -14,7 +14,7 @@
       </li>
       <ul id="candidate-list" data-ng-repeat="row in candidates">
         <li>
-            <a <a href="#/viewCandidate/{{row.id}}">{{ row.name }}</a>
+            <a href="#/viewCandidate/{{row.id}}">{{ row.name }}</a>
         </li>
       </ul>
   </ul>
