Added status on candidate view

--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -44,7 +44,7 @@
           <label>Preferred Languages:</label> {{candidate.preferredLanguages}}
         </div>
         <div class="info-group">
-          <label>Status:</label>
+          <label>Status:</label> {{candidate.finalEvaluation}}
         </div>
         <div class="info-group">
           <label>Screener:</label>
