--- a/app/views/sidebar.html
+++ b/app/views/sidebar.html
@@ -2,7 +2,7 @@
 <div id="sidebar-wrapper">
   <ul class="sidebar-nav">
       <li class="sidebar-brand">
-          <a href="#">
+          <a>
               Candidate List
           </a>
       </li>
@@ -14,7 +14,7 @@
       </li>
       <ul id="candidate-list" data-ng-repeat="row in candidates">
         <li>
-            <a href="#/viewCandidate/{{row.id}}">{{ row.name }}</a>
+            <a <a href="#/viewCandidate/{{row.id}}">{{ row.name }}</a>
         </li>
       </ul>
   </ul>
