Added icon on candidate list based on status

--- a/app/styles/sidebar.css
+++ b/app/styles/sidebar.css
@@ -167,3 +167,20 @@ select {
     margin-left: -5px;
 }
 
+.align-glyphicon {
+  float: right !important;
+  margin-right: 70px;
+  margin-top: 12.5px;
+}
+
+.yellow {
+  color: #8a6d3b;
+}
+
+.red {
+  color: #a94442;
+}
+
+.green {
+  color: #3c763d;
+}
