fix queue style

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -80,6 +80,9 @@
 }
 .info-group > label {
   color: #007BAA;
+}
+
+
 /* Recruiter form styles */
 #recruiter-form-container {
   /*position: absolute;
@@ -93,4 +96,5 @@
 button.candidate-queue-person {
   margin-top: 7px;
   margin-bottom: 7px;
+  border: 10px;
 }
