--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -55,6 +55,9 @@
   <!-- Candidate info -->
   <div id="page-content-wrapper">
     <div class="page-header" data>
+      <div class="pull-right">
+          <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-file"></span> View Resume</button>
+      </div>
       <h1>{{candidate.name}}</h1>
     </div>
 
