--- a/app/views/recruiterHome.html
+++ b/app/views/recruiterHome.html
@@ -28,7 +28,7 @@
                 <div class="queue-animate-container animate-repeat">
                   <div ng-repeat="candidate in candidateQueue | filter:search as results">
                     <button type="button" class="btn btn-primary btn-lg btn-block candidate-queue-person">
-                      {{candidate.lastName}}, {{candidate.firstName}}
+                      {{candidate.name}}
                     </button>
                   </div>
                   <div ng-if="results.length == 0">
