--- a/app/styles/calendar.css
+++ b/app/styles/calendar.css
@@ -53,3 +53,8 @@ span.input-group-addon{
 .bootstrap-timepicker-widget{
   z-index: 9999 !important;
 }
+
+#sel1{
+  width: 30%;
+  height: 30px;
+}
