Added edit candidate info functionality

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -75,9 +75,16 @@
   margin-top: 15px;
   margin-bottom: 15px;
 }
+
 .info-tab-content, h1 {
   color: #005E8C;
 }
+
 .info-group > label {
   color: #007BAA;
+}
+
+.button-link, .button-link:hover {
+  text-decoration: none;
+  color: white;
 }
