--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -67,6 +67,8 @@
       </ul>
 
       <div id="tab-content-div" class="tab-content" ng-include="currentTab"></div>
+
+      <button type="submit" class="btn btn-primary"><a class="button-link" href="#/screener/candidateForm/{{candidate.id}}">Edit</a></button>
     </div>
   </div>
 </div>
