--- a/app/styles/sidebar.css
+++ b/app/styles/sidebar.css
@@ -13,7 +13,7 @@
 #sidebar-wrapper {
     margin-top: -20px;
     z-index: 1000;
-    position: fixed;
+    position: absolute;
     left: 250px;
     width: 0;
     height: 100%;
