--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -68,7 +68,7 @@
 
       <div id="tab-content-div" class="tab-content" ng-include="currentTab"></div>
 
-      <button type="submit" class="btn btn-primary"><a class="button-link" href="#/screener/candidateForm/{{candidate.id}}">Edit</a></button>
+      <button class="btn btn-primary"><a class="button-link" href="#/screener/candidateForm/{{candidate.id}}">Edit</a></button>
     </div>
   </div>
 </div>
