--- a/app/views/candidateForm.html
+++ b/app/views/candidateForm.html
@@ -30,8 +30,13 @@
       <div class="col-md-12">
         <form name="candidateForm" class="text-left">
           <div class="form-group">
-            <label class="control-label">Name:</label>
-            <input class="form-control" type="text" ng-model="postCandidate.name" required>
+            <label class="control-label">First Name:</label>
+            <input class="form-control" type="text" ng-model="postCandidate.firstName" required>
+          </div>
+
+          <div class="form-group">
+            <label class="control-label">Last Name:</label>
+            <input class="form-control" type="text" ng-model="postCandidate.lastName" required>
           </div>
 
           <div class="form-group">
