Updated name on front end based on change to back end

--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -60,7 +60,7 @@
       <div class="pull-right">
           <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-file"></span> View Resume</button>
       </div>
-      <h1>{{candidate.name}}</h1>
+      <h1>{{candidate.firstName}} {{candidate.lastName}}</h1>
     </div>
 
     <div class="container-fluid">
