--- a/app/views/sidebar.html
+++ b/app/views/sidebar.html
@@ -14,7 +14,7 @@
       </li>
       <ul id="candidate-list" data-ng-repeat="row in candidates | filter:searchText">
         <li>
-          <a href="#/viewCandidate/{{row.id}}">{{ row.name }} <span class="align-glyphicon" ng-class="statusIconClass(row.finalEvaluation)"></span></a>
+          <a href="#/viewCandidate/{{row.id}}">{{ row.lastName }}, {{ row.firstName }} <span class="align-glyphicon" ng-class="statusIconClass(row.finalEvaluation)"></span></a>
         </li>
       </ul>
   </ul>
