--- a/app/views/viewCandidates.html
+++ b/app/views/viewCandidates.html
@@ -4,6 +4,6 @@
   <div ng-include src="'views/sidebar.html'"></div>
 
   <div id="page-content-wrapper">
-    Choose a candidate from the sidebar
+    {{ candidateStatus }}
   </div>
 </div>
