added the images to the front end

--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -2,6 +2,7 @@
 	<div id="notes-tab-content">
     Notes
 	</div>
+  <img ng-src="{{candidate.image_uris[0].img_uri}}"  width="300" height="400">
 </script>
 
 <script type="text/ng-template" id="tabInfo.html">
@@ -48,7 +49,6 @@
     </button>
 	</div>
 </script>
-<img ng-src="{{candidate.image_uris[0].img_uri}}">
 
 <div id="wrapper">
 
