--- a/app/views/candidateForm.html
+++ b/app/views/candidateForm.html
@@ -98,7 +98,7 @@
 
           <div class="text-center">
             <div id="thumbnail-preview-area" ng-show="pictureAdded">
-              <img ng-src="{{postCandidate.resumeBase64}}" width=300 height="400" />
+              <img ng-src="{{postCandidate.resumeBase64}}" width="300" height="400" />
             </div>
 
             <span class="glyphicon glyphicon-refresh" ng-show="sendingData" aria-hidden="true"></span>
