--- a/app/views/softpen.html
+++ b/app/views/softpen.html
@@ -1,23 +1,255 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+<div>
+  <div class="container">
+    <div class="row tools-bar" id="options" >
+      <div class="btn-group" role="group" aria-label="...">
+          <button value="black" type="button" class="btn btn-default color-button active">
+            <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
+          </button>
+          <button value="red" type="button" class="btn btn-default color-button">
+            <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
+          </button>
+          <button value="blue" type="button" class="btn btn-default color-button">
+            <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
+          </button>
+          <button value="yellow" type="button" class="btn btn-default color-button">
+            <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
+          </button>
+          <button value="green" type="button" class="btn btn-default color-button">
+            <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
+          </button>
+      </div>
+      <div class="btn-group" role="group" aria-label="...">
+          <button id="pen" type="button" class="btn btn-default tool-button active">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+          </button>
+          <button id="marker" type="button" class="btn btn-default tool-button">
+            <span class="glyphicon glyphicon-erase" aria-hidden="true"></span>
+          </button>
+      </div>
+      <div class="btn-group" role="group" aria-label="...">
+          <button value="minus" type="button" class="btn btn-default thinknessChanger">
+            <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+          </button>
+          <button type="button" class="btn btn-default" >
+            <span id="thickness" class="glyphicon" aria-hidden="true" style="font-weight: bold">1</span>
+          </button>
+          <button value="plus" type="button" class="btn btn-default thinknessChanger">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+          </button>
+      </div>
+      <div class="btn-group" role="group" aria-label="...">
+          <button id="undo" type="button" class="btn btn-default">
+            <span class="glyphicon glyphicon-share-alt icon-flip " aria-hidden="true"></span>
+          </button>
+          <button id="redo" type="button" class="btn btn-default">
+            <span class="glyphicon glyphicon-share-alt " aria-hidden="true"></span>
+          </button>
+      </div>
+      <div class="btn-group" role="group" aria-label="...">
+          <button id="undo" type="button" class="btn btn-default">
+            <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+          </button>
+          <button id="redo" type="button" class="btn btn-default">
+            <span class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
+          </button>
+      </div>
+      <!-- <button class="btn btn-info" style="margin-left: 50px">Stop</button> -->
+      <button class="btn btn-danger" style="margin-left: 50px">Save</button>
+    </div>
+    <div class="row" style="margin-top: 50px">
+      <canvas class="" id="c" height="995" width="775" style="border: 1px solid black"></canvas>
+    </div>
+  </div>
+  <style>
+    .icon-flip{
+      -moz-transform: scale(-1, 1);
+      -webkit-transform: scale(-1, 1);
+      -o-transform: scale(-1, 1);
+      -ms-transform: scale(-1, 1);
+      transform: scale(-1, 1);
+    }
+    .btn-group{
+      margin-left: 10px;
+    }
+    .tools-bar{
+      position: fixed;
+      z-index: 2;
+      background-color: white;
+    }
+  </style>
+  <script>
+    //Module Fields
+    //-------------------------------------------------------------------------------------
+    var colors = {
+      red: "rgba(255,0,0,1)",
+      blue: "rgba(0,0,204,1)",
+      yellow: "rgba(255,255,102,1)",
+      black: "rgba(0,0,0,1)",
+      green: "rgba(51,255,120,1)"
+    };
+    defaultPenColor = "black";
+    defaultMarkerColor = "yellow";
+    penThickOptions = [1, 5, 10];
+    markerThickOptions = [20, 35, 50];
+    markerOppacity = 0.2;
+    penSelectedThickness = 0;
+    markerSelectedThickness = 0;
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
+    var colorButtons = $(".color-button");
+    toolButtons = $(".tool-button");
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+    $(document).ready(function() {
+      var buttons = $(".color-button");
+      for (var i = 0; i < buttons.length; i++) {
+        buttons[i].style = "color: " + colors[buttons[i].value];
+      }
+    });
+
+
+
+    //Fabric setup and image load
+    //-------------------------------------------------------------------------------------
+    var canvas = new fabric.Canvas("c");
+    var eventStack = [];
+    var isRedoing = false;
+    canvas.isDrawingMode = true;
+
+    fabric.Image.fromURL("../images/resume.png", function(img) {
+      canvas.add(img);
+    });
+
+    canvas.on('object:added', function() {
+      if (!isRedoing) {
+        h = [];
+      }
+      isRedoing = false;
+    });
+
+
+
+    //Tool functions
+    //----------------------------------------------------------------------------------
+    function undo() {
+      if (canvas._objects.length > 1) {
+        h.push(canvas._objects.pop());
+        canvas.renderAll();
+      }
+    }
+
+    function redo() {
+      if (h.length > 0) {
+        isRedoing = true;
+        canvas.add(h.pop());
+      }
+    }
+
+    function changeColor(color) {
+      if (($("#pen")[0].getAttribute("class")).indexOf("active") !== -1) {
+        canvas.freeDrawingBrush.color = colors[color];
+        defaultPenColor = color;
+
+      } else {
+        var newColor = colors[color].split(",");
+        newColor[3] = markerOppacity + ")";
+        console.log(newColor.join());
+        canvas.freeDrawingBrush.color = newColor.join();
+        defaultMarkerColor = color;
+      }
+    }
+
+    function activateTag(tag) {
+      tag.className += " active";
+    }
+
+    function updateThicknessDisplay(thickness) {
+      $("#thickness").text(thickness + 1);
+    }
+
+    function findTagByColor(color) {
+      for (var i = 0; i < colorButtons.length; i++) {
+        if (colorButtons[i].value == color)
+          return colorButtons[i];
+      }
+      return {
+        class: "",
+        value: ""
+      };
+    }
+
+    function increaseWidth() {
+      if ($("#pen").hasClass("active")) {
+        if (penSelectedThickness < penThickOptions.length - 1) {
+          canvas.freeDrawingBrush.width = penThickOptions[++penSelectedThickness];
+          updateThicknessDisplay(penSelectedThickness);
+        }
+      } else if ($("#marker").hasClass("active")) {
+        if (markerSelectedThickness < markerThickOptions.length - 1) {
+          canvas.freeDrawingBrush.width = markerThickOptions[++markerSelectedThickness];
+          updateThicknessDisplay(markerSelectedThickness);
+        }
+      }
+    }
+
+    function decreaseWidth() {
+      if ($("#pen").hasClass("active")) {
+        if (penSelectedThickness > 0) {
+          canvas.freeDrawingBrush.width = penThickOptions[--penSelectedThickness];
+          updateThicknessDisplay(penSelectedThickness);
+        }
+      } else if ($("#marker").hasClass("active")) {
+        if (markerSelectedThickness > 0) {
+          canvas.freeDrawingBrush.width = markerThickOptions[--markerSelectedThickness];
+          updateThicknessDisplay(markerSelectedThickness);
+        }
+      }
+    }
+
+
+
+    //Event Listeners
+    // --------------------------------------------------------------------------------
+    $("#undo").on("click", function() {
+      undo();
+    });
+
+    $("#redo").on("click", function() {
+      redo();
+    });
+
+    $(".color-button").on("click", function() {
+      $(".color-button").removeClass("active");
+      changeColor(this.value);
+      activateTag(this);
+    });
+
+    $(".thinknessChanger").on("click", function() {
+      if (this.value == "plus") {
+        console.log("increase");
+        increaseWidth();
+      } else {
+        console.log("decrease");
+        decreaseWidth();
+      }
+    });
+
+    $(".tool-button").on("click", function() {
+      $(".tool-button").removeClass("active");
+      this.className += " active";
+
+      if (this.id == 'pen') {
+        $(".color-button").removeClass("active");
+        canvas.freeDrawingBrush.width = penThickOptions[penSelectedThickness];
+        updateThicknessDisplay(penSelectedThickness);
+        changeColor(defaultPenColor);
+        activateTag(findTagByColor(defaultPenColor));
+      } else {
+        $(".color-button").removeClass("active");
+        canvas.freeDrawingBrush.width = markerThickOptions[markerSelectedThickness];
+        updateThicknessDisplay(markerSelectedThickness);
+        changeColor(defaultMarkerColor);
+        activateTag(findTagByColor(defaultMarkerColor));
+      }
+    });
+  </script>
 </div>
