--- a/app/views/softpen.html
+++ b/app/views/softpen.html
@@ -57,9 +57,11 @@
       <button class="btn btn-danger" style="margin-left: 50px">Save</button>
     </div>
     <div class="row" style="margin-top: 50px">
-      <canvas class="" id="c" height="995" width="775" style="border: 1px solid black"></canvas>
       <div ng-controller="SoftPenCtrl">
-       <img id="resume-image" ng-src="{{src}}" imageonload />
+        <img id="resume-image" ng-src="{{src}}" imageonload style="display: none;" />
+      <canvas class="" id="c" height="995" width="775" style="border: 1px solid black"></canvas>
+
+
 </div>
     </div>
   </div>
@@ -114,15 +116,31 @@
     //Fabric setup and image load
     //-------------------------------------------------------------------------------------
     var canvas = new fabric.Canvas("c");
+
     var eventStack = [];
     var isRedoing = false;
     canvas.isDrawingMode = true;
-    var input = document.getElementById('song-image');
+    var imgObj = new Image();
+    setTimeout(function(){
+      var input = document.getElementById('resume-image');
+      var img = input;
 
-    fabric.Image.fromURL("../images/resume.png", function(img) {
+      imgObj.src = img.src;
+
+
+  }, 3000);
+
+
+
+
+    imgObj.onload = function () {
+      var image = new fabric.Image(imgObj);
+    	 canvas.add(image);
+    }
+    /*fabric.Image.fromURL("../images/resume.png", function(img) {
       var input = document.getElementById('resume-image');
       canvas.add(img);
-    });
+    });*/
 
     canvas.on('object:added', function() {
       if (!isRedoing) {
