Screener initials now saved to candidate table

--- a/app/views/candidateForm.html
+++ b/app/views/candidateForm.html
@@ -93,7 +93,7 @@
 
           <div class="form-group">
             <label class="control-label">Screener Initials</label>
-            <input class="form-control" type="text" required>
+            <input class="form-control" type="text" ng-model="postCandidate.screenerInitials" required>
           </div>
 
           <div class="text-center">
