fixed custom queries and standardized database table names

--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -2,7 +2,8 @@
 	<div id="notes-tab-content">
     Notes
 	</div>
-  <img ng-src="{{candidate.image_uris[0].img_uri}}"  width="300" height="400">
+  <img ng-src="{{candidate.Images[0].img_uri}}"  width="300" height="400">
+  <label>{{candidate.Images[0].img_uri}}</label>
 </script>
 
 <script type="text/ng-template" id="tabInfo.html">
