Clear search box when user changes filter by category

--- a/app/views/sidebar.html
+++ b/app/views/sidebar.html
@@ -12,7 +12,7 @@
           <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
         </div>
         <div class="input-group">
-          <select class="form-control" aria-describedby="sizing-addon2" ng-model="property">
+          <select class="form-control" aria-describedby="sizing-addon2" ng-model="property" ng-click="clear()">
             <option value="firstName">First Name</option>
             <option value="lastName">Last Name</option>
             <option value="school">School</option>
