--- a/app/views/sidebar.html
+++ b/app/views/sidebar.html
@@ -21,7 +21,7 @@
           <span class="input-group-addon" id="sizing-addon2"><span class="glyphicon glyphicon-filter"></span></span>
         </div>
       </li>
-      <ul id="candidate-list" data-ng-repeat="row in candidates | filter:search">
+      <ul id="candidate-list" data-ng-repeat="row in candidates | filter:search | orderBy: 'lastName'">
         <li>
           <a href="#/viewCandidate/{{row.id}}">{{ row.lastName }}, {{ row.firstName }} <span class="align-glyphicon" ng-class="statusIconClass(row.finalEvaluation)"></span></a>
         </li>
