--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -1,8 +1,7 @@
 <script type="text/ng-template" id="tabNotes.html">
 	<div id="notes-tab-content">
-    Notes
+		<img id="tab-resume-img" ng-src="{{candidate.image_uris[0].img_uri}}" alt="Resume" width="200" height="275" data-toggle="modal" data-target="#imageModal">
 	</div>
-  <img ng-src="{{candidate.image_uris[0].img_uri}}" alt="Resume" width="300" height="400">
 </script>
 
 <script type="text/ng-template" id="tabInfo.html">
@@ -76,7 +75,7 @@
   <!-- Candidate info -->
   <div id="page-content-wrapper">
     <div class="page-header">
-      <div class="pull-right">
+			<div class="pull-right">
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#imageModal" ><span class="glyphicon glyphicon-file"></span> View Resume</button>
       </div>
       <h1>{{candidate.firstName}} {{candidate.lastName}}</h1>
@@ -91,12 +90,12 @@
 
       <div id="tab-content-div" class="tab-content" ng-include="currentTab"></div>
     </div>
-  </div>
-</div>
 
-<!-- The Modal -->
-<div id="imageModal" class="modal" role="dialog" aria-labelledby="myModalLabel">
-	<span class="close" data-dismiss="modal" data-target="#imageModal">×</span>
-	<img class="modal-content" id="modalImage" role="document" src="{{candidate.image_uris[0].img_uri}};" alt="{{candidate.firstName}} {{candidate.lastName}}'s Resume">
-	<div id="imageCaption"></div>
+		<!-- The Modal -->
+		<div id="imageModal" class="modal" role="dialog" aria-labelledby="myModalLabel">
+			<span class="close" data-dismiss="modal" data-target="#imageModal">×</span>
+			<img class="modal-content" id="modalImage" role="document" ng-src="{{candidate.image_uris[0].img_uri}}" alt="{{candidate.firstName}} {{candidate.lastName}}'s Resume">
+			<div id="imageCaption"></div>
+		</div>
+  </div>
 </div>
