--- a/app/views/viewCandidates.html
+++ b/app/views/viewCandidates.html
@@ -4,6 +4,6 @@
   <div ng-include src="'views/sidebar.html'"></div>
 
   <div id="page-content-wrapper">
-    {{ candidateStatus }}
+    <h4 id="candidateStatus">{{ candidateStatus }}</h4>
   </div>
 </div>
