--- a/app/styles/calendar.css
+++ b/app/styles/calendar.css
@@ -61,9 +61,12 @@ span.input-group-addon{
 /* Recruiter form styles */
 
 #recruiter-form-container {
-  position: absolute;
+  float: right;
+  display: block;
+  width: 67%;
   right: 0px;
-  width: 68%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 button.candidate-queue-person {
