--- a/app/views/sidebar.html
+++ b/app/views/sidebar.html
@@ -14,6 +14,7 @@
 
         <div class="input-group">
           <select class="form-control" aria-describedby="sizing-addon2" ng-model="property" ng-click="clear()">
+            <option selected disabled>Sort By</option>
             <option value="firstName">First Name</option>
             <option value="lastName">Last Name</option>
             <option value="school">School</option>
@@ -25,6 +26,7 @@
 
         <div class="input-group">
           <select class="form-control" aria-describedby="sizing-addon2" ng-model="order">
+            <option selected disabled>Order By</option>
             <option value="firstName">First Name</option>
             <option value="lastName">Last Name</option>
             <option value="school">School</option>
