Get image on next button, softpen service

--- a/app/views/softpen.html
+++ b/app/views/softpen.html
@@ -66,6 +66,7 @@
 </div>
 
     </div>
+      <button ng-click="next()" id="next" class="btn btn-danger" style="margin-left: 50px">Next</button>
   </div>
   <style>
     .icon-flip{
