--- a/app/views/softpen.html
+++ b/app/views/softpen.html
@@ -53,11 +53,17 @@
             <span class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
           </button>
       </div>
+      <div class="pull-right">
+        <div class="camera-capture">
+          <input type="file" name="resume" id="resume" class="resumeImage" accept="image/*" capture="camera" custom-on-change="readImage">
+          <label for="resume" class="resumeImageLabel"><span class="glyphicon glyphicon-camera camera-glyph"></span></label>
+        </div>
+      </div>
       <!-- <button class="btn btn-info" style="margin-left: 50px">Stop</button> -->
     </div>
     <div class="row" style="margin-top: 50px">
       <div ng-controller="SoftPenCtrl">
-        <img class="mustLoad" id="resume-image" ng-src="{{src}}" imageonload style="display: none;" />
+        <img class="mustLoad" id="resume-image" ng-src="{{resumeBase64}}" style="display: none;" />
       <canvas class="" id="c" height="995" width="775" style="border: 1px solid black"></canvas>
       <img id="edited-image" ng-load="" style=/>
 
