--- a/app/views/softpen.html
+++ b/app/views/softpen.html
@@ -2,56 +2,56 @@
   <div class="container">
     <div class="row tools-bar" id="options" >
       <div class="btn-group" role="group" aria-label="...">
-          <button value="black" type="button" class="btn btn-default color-button active">
-            <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
-          </button>
-          <button value="red" type="button" class="btn btn-default color-button">
-            <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
-          </button>
-          <button value="blue" type="button" class="btn btn-default color-button">
-            <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
-          </button>
-          <button value="yellow" type="button" class="btn btn-default color-button">
-            <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
-          </button>
-          <button value="green" type="button" class="btn btn-default color-button">
-            <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
-          </button>
+        <button value="black" type="button" class="btn btn-default color-button active">
+          <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
+        </button>
+        <button value="red" type="button" class="btn btn-default color-button">
+          <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
+        </button>
+        <button value="blue" type="button" class="btn btn-default color-button">
+          <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
+        </button>
+        <button value="yellow" type="button" class="btn btn-default color-button">
+          <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
+        </button>
+        <button value="green" type="button" class="btn btn-default color-button">
+          <span class="glyphicon glyphicon-tint" aria-hidden="true"></span>
+        </button>
       </div>
       <div class="btn-group" role="group" aria-label="...">
-          <button id="pen" type="button" class="btn btn-default tool-button active">
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-          </button>
-          <button id="marker" type="button" class="btn btn-default tool-button">
-            <span class="glyphicon glyphicon-erase" aria-hidden="true"></span>
-          </button>
+        <button id="pen" type="button" class="btn btn-default tool-button active">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        </button>
+        <button id="marker" type="button" class="btn btn-default tool-button">
+          <span class="glyphicon glyphicon-erase" aria-hidden="true"></span>
+        </button>
       </div>
       <div class="btn-group" role="group" aria-label="...">
-          <button value="minus" type="button" class="btn btn-default thinknessChanger">
-            <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
-          </button>
-          <button type="button" class="btn btn-default" >
-            <span id="thickness" class="glyphicon" aria-hidden="true" style="font-weight: bold">1</span>
-          </button>
-          <button value="plus" type="button" class="btn btn-default thinknessChanger">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-          </button>
+        <button value="minus" type="button" class="btn btn-default thinknessChanger">
+          <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+        </button>
+        <button type="button" class="btn btn-default" >
+          <span id="thickness" class="glyphicon" aria-hidden="true" style="font-weight: bold">1</span>
+        </button>
+        <button value="plus" type="button" class="btn btn-default thinknessChanger">
+          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+        </button>
       </div>
       <div class="btn-group" role="group" aria-label="...">
-          <button id="undo" type="button" class="btn btn-default">
-            <span class="glyphicon glyphicon-share-alt icon-flip " aria-hidden="true"></span>
-          </button>
-          <button id="redo" type="button" class="btn btn-default">
-            <span class="glyphicon glyphicon-share-alt " aria-hidden="true"></span>
-          </button>
+        <button id="undo" type="button" class="btn btn-default">
+          <span class="glyphicon glyphicon-share-alt icon-flip " aria-hidden="true"></span>
+        </button>
+        <button id="redo" type="button" class="btn btn-default">
+          <span class="glyphicon glyphicon-share-alt " aria-hidden="true"></span>
+        </button>
       </div>
       <div class="btn-group" role="group" aria-label="...">
-          <button id="undo" type="button" class="btn btn-default">
-            <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
-          </button>
-          <button id="redo" type="button" class="btn btn-default">
-            <span class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
-          </button>
+        <button id="undo" type="button" class="btn btn-default">
+          <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+        </button>
+        <button id="redo" type="button" class="btn btn-default">
+          <span class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
+        </button>
       </div>
       <div class="pull-right">
         <div class="camera-capture">
@@ -62,15 +62,12 @@
       <!-- <button class="btn btn-info" style="margin-left: 50px">Stop</button> -->
     </div>
     <div class="row" style="margin-top: 50px">
-      <div ng-controller="SoftPenCtrl">
+      <div>
         <img class="mustLoad" id="resume-image" ng-src="{{resumeBase64}}" style="display: none;" />
-      <canvas class="" id="c" height="995" width="775" style="border: 1px solid black"></canvas>
-      <img id="edited-image" ng-load="" style=/>
-
-
-</div>
-
+        <canvas class="" id="c" height="995" width="775" style="border: 1px solid black"></canvas>
+        <img id="edited-image" ng-load="" style=/>
+      </div>
     </div>
-      <button ng-click="next()" id="next" class="btn btn-danger" style="margin-left: 50px">Next</button>
+    <button ng-click="next()" id="next" class="btn btn-danger" style="margin-left: 50px">Next</button>
   </div>
 </div>
