2 new views Admin options and ManageForms

--- a/app/views/adminOptions.html
+++ b/app/views/adminOptions.html
@@ -1,7 +1,14 @@
-<div class="container">
-  <div class="text-center">
-    <h1>Administrative Options</h1>
-  </div>
-</div>
+<div class="container-fluid">
 
-<button class="btn btn-success" type="button" name="button">Add Form</button>
+    <div class="row">
+      <h1 class="text-center">Administrative Options</h1>
+      <div class="col-xs-4 col-xs-offset-4" >
+        <table class="table table-hover table-responsive">
+          <tr><a ng-href="#/admin/adminOptions/adminOptionsForms"><h3 class="text-center">Modify Forms</h3></a></tr>
+          <tr><a ng-href="#/admin/adminOptions"><h3 class="text-center">....</h3></a></tr>
+          <tr><a ng-href="#/admin/adminOptions"><h3 class="text-center">....</h3></a></tr>
+          <tr><a ng-href="#/admin/adminOptions"><h3 class="text-center">....</h3></a></tr>
+        </table>
+      </div>
+    </div>
+</div>
