--- a/app/views/interviewerForm.html
+++ b/app/views/interviewerForm.html
@@ -39,7 +39,7 @@
           view-date="calendarDate"
           events="events"
           view-title="calendarTitle"
-          on-event-click="eventClicked(calendarEvent)"
+          on-event-click="eventClicked()"
           on-event-times-changed="calendarEvent.startsAt = calendarNewEventStart; calendarEvent.endsAt = calendarNewEventEnd"
           cell-is-open="true">
         </mwl-calendar>
