--- a/app/views/adminOptions.html
+++ b/app/views/adminOptions.html
@@ -1,14 +1,37 @@
 <div class="container-fluid">
+  <div class="row">
+    <h1 class="text-center">Administrative Options</h1>
+    <hr/>
+  </div>
 
-    <div class="row">
-      <h1 class="text-center">Administrative Options</h1>
-      <div class="col-xs-4 col-xs-offset-4" >
-        <table class="table table-hover table-responsive">
-          <tr><a ng-href="#/admin/adminOptions/adminOptionsForms"><h3 class="text-center">Modify Forms</h3></a></tr>
-          <tr><a ng-href="#/admin/adminOptions"><h3 class="text-center">....</h3></a></tr>
-          <tr><a ng-href="#/admin/adminOptions"><h3 class="text-center">....</h3></a></tr>
-          <tr><a ng-href="#/admin/adminOptions"><h3 class="text-center">....</h3></a></tr>
-        </table>
-      </div>
-    </div>
+  <div class="row">
+      <button type="button" class="btn btn-primary pull-right">Add new</span></button>
+  </div>
+
+  <div class="row admin-option-top-margin">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Active</th>
+          <th>Type</th>
+          <th>Form</th>
+          <th>Version</th>
+          <th>View</th>
+          <th>Delete</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="form in forms">
+          <th scope="row">1</th>
+          <td><i ng-show="form.active" class="btn btn-success glyphicon glyphicon-ok-sign"></i></td>
+          <td>{{form.type}}</td>
+          <td>{{form.form}}</td>
+          <td>{{form.version}}</td>
+          <td><i class="btn btn-warning glyphicon glyphicon-file"></i></td>
+          <td><i class="btn btn-danger glyphicon glyphicon-trash"></i></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
