Softpen now features drawing mode under the tools, if drawing mode is off user can zoom in and out without writing. Also cannot undo and redo if drawing mode is off as intended

--- a/app/styles/softpen.css
+++ b/app/styles/softpen.css
@@ -13,3 +13,14 @@
   z-index: 2;
   background-color: white;
 }
+.pull-right{
+	margin-left: 20px;
+}
+#inactive{
+	border: solid 1px black;
+  height: 995px;
+  width: 775px;
+}
+.hide{
+  display: none;
+}
