--- a/app/views/softpen.html
+++ b/app/views/softpen.html
@@ -25,6 +25,9 @@
         <button id="marker" type="button" class="btn btn-default tool-button">
           <span class="glyphicon glyphicon-erase" aria-hidden="true"></span>
         </button>
+        <button id="stopDrawingMode" type="button" class="btn btn-default tool-button">
+          <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+        </button>
       </div>
       <div class="btn-group" role="group" aria-label="...">
         <button value="minus" type="button" class="btn btn-default thinknessChanger">
@@ -45,14 +48,6 @@
           <span class="glyphicon glyphicon-share-alt " aria-hidden="true"></span>
         </button>
       </div>
-      <div class="btn-group" role="group" aria-label="...">
-        <button id="undo" type="button" class="btn btn-default">
-          <span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
-        </button>
-        <button id="redo" type="button" class="btn btn-default">
-          <span class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
-        </button>
-      </div>
       <div class="pull-right">
         <div class="camera-capture">
           <input type="file" name="resume" id="resume" class="resumeImage" accept="image/*" capture="camera" custom-on-change="readImage">
@@ -65,6 +60,7 @@
       <div>
         <img class="mustLoad" id="resume-image" ng-src="{{resumeBase64}}" style="display: none;" />
         <canvas class="" id="c" height="995" width="775" style="border: 1px solid black"></canvas>
+        <img id="inactive" src="" class="hide">
       </div>
     </div>
     <button ng-click="next()" id="next" class="btn btn-danger" style="margin-left: 50px">Next</button>
