--- a/app/views/softpen.html
+++ b/app/views/softpen.html
@@ -53,7 +53,7 @@
           <span class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
         </button>
       </div>
-      <div class="pull-right center-toolbar">
+      <div class="pull-right camera-pull-right">
         <div class="camera-capture">
           <input type="file" name="resume" id="resume" class="resumeImage" accept="image/*" capture="camera" custom-on-change="readImage">
           <label for="resume" class="resumeImageLabel"><span class="glyphicon glyphicon-camera camera-glyph"></span></label>
@@ -69,7 +69,7 @@
       </div>
     </div>
 
-    <div class="row col-md-2 col-md-offset-5">
+    <div class="row col-md-2 col-md-offset-5 btn-next">
       <button ng-click="next()" id="next" class="btn btn-danger">Next</button>
     </div>
   </div>
