--- a/app/views/viewCandidate.html
+++ b/app/views/viewCandidate.html
@@ -73,7 +73,7 @@
 
 		<!-- The Modal -->
 		<div id="imageModal" class="modal" role="dialog" aria-labelledby="myModalLabel">
-			<span class="close" data-dismiss="modal" data-target="#imageModal">×</span>
+			<span id="imageModalClose" class="close" data-dismiss="modal" data-target="#imageModal">×</span>
 			<img class="modal-content" id="modalImage" role="document" ng-src="{{candidate.Images[0].img_uri}}" alt="{{candidate.firstName}} {{candidate.lastName}}'s Resume">
 			<div id="imageCaption"></div>
 		</div>
